--- a/pom.xml
+++ b/pom.xml
@@ -216,7 +216,7 @@
 
     <repositories>
         <repository>
-            <id>nexus-releases</id>
+            <id>nexus</id>
             <name>Nexus Repository</name>
             <url>http://192.168.0.103:8081/repository/maven-public/</url>
             <snapshots>
